<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level1Activity">

    <TextView
        android:id="@+id/adviceTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/level_1_advice_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scoreDescriberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="56dp"
        android:text="@string/score_describer"
        app:layout_constraintEnd_toStartOf="@+id/scoreTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/healthDescribTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/health_describer"
        app:layout_constraintBottom_toTopOf="@+id/scoreDescriberTxt"
        app:layout_constraintEnd_toStartOf="@+id/healthTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/healthTxt"
        android:layout_width="38dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/health"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthTxt" />

    <com.dragankrstic.autotypetextview.AutoTypeTextView
        android:id="@+id/scenarioTxt"
        android:layout_width="402dp"
        android:layout_height="527dp"
        android:layout_marginTop="80dp"
        android:alpha="1"
        android:text="@string/shelter_scenario"
        android:textColor="#00BCD4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        attv:animateTextTypeWithoutMistakes="Hello World!" />

    <TextView
        android:id="@+id/levelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/level_1_name"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decision1Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/find_shelter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decision2Btn"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/decision2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="44dp"
        android:text="@string/find_water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decision1Btn" />

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="132dp"
        android:layout_height="53dp"
        android:layout_marginBottom="108dp"
        android:alpha="0"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/statusProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="98dp"
        android:layout_height="100dp"
        android:layout_marginBottom="240dp"
        android:alpha="0"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@+id/startGameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statusTxt"
        android:layout_width="152dp"
        android:layout_height="45dp"
        android:layout_marginTop="42dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/loading_1"
        app:layout_constraintBottom_toTopOf="@+id/startGameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusProgressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>